# servant-github

./: .gitignore  LICENSE  README.md  servant-github.cabal  stack.yaml
app/: Main.hs
src/Network/: GitHub.hs
src/Network/GitHub/: API.hs  Authentication.hs  Client.hs  Organisation.hs  Types.hs
src/Network/GitHub/Types/: Core.hs  Gist.hs
src/Network/GitHub/Types/Gist/: Core.hs  Create.hs  Edit.hs
test/: Spec.hs
