name:                servant-github
version:             0.1.0.0
synopsis:            Bindings to GitHub API using servant.
description:         Please see README.md
homepage:            http://github.com/finlay/servant-github#readme
license:             BSD3
license-file:        LICENSE
author:              Finlay Thompson
maintainer:          finlay.thompson@gmail.com
copyright:           2015 Finlay Thompson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.GitHub
                     , Network.GitHub.Authentication
                     , Network.GitHub.Organisation
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , either
                     , servant
                     , servant-client
                     , text
                     , transformers
  default-language:    Haskell2010

executable servant-github-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , either
                     , text
                     , servant-github
  default-language:    Haskell2010

test-suite servant-github-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , servant-github
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/finlay/servant-github
